[gd_scene load_steps=5 format=3 uid="uid://dyljn7unax7od"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_77thl"]
[ext_resource type="Texture2D" uid="uid://dp3ofvvk4xxut" path="res://assets/background_1 .png" id="2_anpce"]
[ext_resource type="Texture2D" uid="uid://dgpi4sn1kurfi" path="res://assets/block1.png" id="3_0a015"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jap4a"]
bg_color = Color(0.298039, 0.635294, 0.854902, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_77thl")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_anpce")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 397.0
offset_right = 669.0
offset_bottom = 503.0
theme_override_styles/normal = SubResource("StyleBoxFlat_jap4a")
text = "Play"
icon = ExtResource("3_0a015")

[node name="HighscoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 484.0
offset_top = 368.0
offset_right = 579.0
offset_bottom = 394.0
text = "Highscore: 0"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
